fix: change layout breakpoint

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -3,7 +3,7 @@ html {
     background-color: white !important;
   }
 
-  @media (max-width: 995px){
+  @media (max-width: 994px){
     .navbar-header {
       width: 100%;
     }
